Starting PHP Connection
Learning PHP

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="center">
         <h1>Login</h1>
-        <form method="post">
+        <form method="post" action="connect.php">
             <div class="txt_field">
                 <input type="text" required>
                 <span></span>
